2.0.1 - Fixed link color in articles - Increased letter spacing for bold text

--- a/themes.local/feedmei+.css
+++ b/themes.local/feedmei+.css
@@ -70,4 +70,5 @@ div.cdm.expanded {
 .post .content figure * {
 	margin: 0;
 	font: 600 13px "PT Sans", sans-serif !important;
+	letter-spacing: .005em;
 }
